# Digital-Image-Processing-Cpp

./: README.md
Chapter_3_Intensity_Transformation_and_Spatial_Filtering/: CMakeLists.txt  README.md  Section_3_3.h  Section_3_3_src.cpp  Section_3_5_src.cpp  Section_3_6_src.cpp  main.cpp  main_header.h
Chapter_3_Intensity_Transformation_and_Spatial_Filtering/3_2_Basic_Intensity_Transformation/: CMakeLists.txt
Chapter_3_Intensity_Transformation_and_Spatial_Filtering/include/Section_3_2/: Section_3_2.h  Section_3_2_src.cpp
Chapter_3_Intensity_Transformation_and_Spatial_Filtering/include/Section_3_5/: Section_3_5.h
Chapter_3_Intensity_Transformation_and_Spatial_Filtering/include/Section_3_6/: Section_3_6.h
Chapter_4_Filtering_in_the_Frequency_Domain/: CMakeLists.txt  Section_4_10.cpp  Section_4_6.cpp  Section_4_8.cpp  Section_4_9.cpp  Thumbs.db  main_file.cpp  main_header.h
Chapter_4_Filtering_in_the_Frequency_Domain/include/: Section_4_10_H_.h  Section_4_9_H_.h
Chapter_5_Image_Restroration_and_Reconstruction/: CMakeLists.txt  README.md  Section_5_2.cpp  Section_5_2_H_.h  Section_5_3.cpp  Section_5_3_H_.h  Section_5_7.cpp  Section_5_8.cpp  Section_5_8_H_.h  Section_5_9.cpp  Section_5_9_H_.h  main_file.cpp
Chapter_5_Image_Restroration_and_Reconstruction/include/: Section_5_7_H_.h  main_header.h
